@@ -1,5 +1,7 @@
 ChangeLog
 ==========
+- default samtools changed from samtools1 to samtools (as now samtools1 is just a link to samtools)
+- add ability to specify cluster in config  (for running on gseq)
 - extra logging where library merge previously done but composition has changed 
 - make library merge jobs mlwarehouse query free by moving query for reference_genome_path (for running on gseq)
 - remove test for gseq
